<resources>
    <string name="vip">VIP</string>
    <string name="products">PRODUCTS</string>
    <string name="reviews">REVIEWS</string>
    <string name="review">Review</string>
    <string name="comment">Comment</string>
    <string name="comment2">COMMENT</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>

    <string name="commentHint">Please place your comment!</string>

    <string name="categories">CATEGORIES</string>
    <string name="home">HOME</string>
    <string name="cart">CART</string>
    <string name="logout">LOGOUT</string>
    <string name="refresh">REFRESH</string>
    <string name="back">BACK</string>
    <string name="placeOrder">PLACE ORDER</string>
    <string name="min">-</string>
    <string name="plus">+</string>
    <string name="networkConnection">Please check your network connection!</string>
    <string name="name">Name: </string>
    <string name="price">Price: </string>
    <string name="description">Description: </string>
    <string name="count">Count</string>
    <string name="addCart">Add to cart</string>
    <string name="app_name">SmartMenu</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Register now!</string>
    <string name="btn_link_to_login">Already registered? Click here!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Address to sent you password reset instructions.</string>
    <string name="email_id">Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_test_list">Tests</string>
    <string name="title_test_detail">Test Detail</string>
    <string name="categoryId">Category:</string>
</resources>
