<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".activity.MasterActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center">

        <TextView
            android:id="@+id/txtTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="28dp"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/logo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:layout_above="@id/footer"
        android:id="@+id/fragment">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragmentPlace">

        </FrameLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/footer"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:padding="0dp">

        <Button
            android:id="@+id/btnCategorie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_weight="1"
            android:text="@string/categories"
            android:background="@color/fui_transparent"
            android:textColor="@color/colorWhite" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:background="@color/colorWhite"/>

        <Button
            android:id="@+id/btnCart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:padding="0dp"
            android:text="@string/cart"
            android:background="@color/fui_transparent"
            android:textColor="@color/colorWhite" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:background="@color/colorWhite"/>

        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:padding="0dp"
            android:text="@string/logout"
            android:background="@color/fui_transparent"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</RelativeLayout>